disable key when click

--- a/Hangman/src/Components/Keyboard/Key.module.css
+++ b/Hangman/src/Components/Keyboard/Key.module.css
@@ -7,4 +7,12 @@
     justify-content: center;
     text-transform: uppercase;
     font-weight: 700;
+    cursor: pointer;
+}
+
+.disabled {
+    color: #a7a7a7;
+    border: 3px #a7a7a7 solid;
+    cursor: default;
+    pointer-events: none;
 }
